[package]
name = "util31"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
url = "2.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
os_info = "3.6.0"
gethostname = "0.4.1"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s"
strip = true  # Automatically strip symbols from the binary.
debug-assertions = false